# rs-virtual_view_dom

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md
examples/: children.html  children.rs  counter.html  counter.rs  simple.html  simple.rs
examples/simple/: Cargo.toml  index.html
examples/simple/src/: main.rs
src/: events.rs  handler.rs  lib.rs  node_ref.rs  nodes_ids.rs  patcher.rs
src/events/: dom_event.rs  events.rs  mod.rs  node_ref.rs
src/utils/: js_value_to_prop.rs  mod.rs  to_html_string.rs
tests/: to_html_string_test.rs
