[package]
name = "view_dom"
version = "0.1.0"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["virtual", "view", "dom", "web"]
categories = ["gui"]

description = "a virtual view transaction renderer for the dom"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/nathanfaucett/rs-view_dom.git"
homepage = "https://gitlab.com/nathanfaucett/rs-view_dom"

[lib]
name = "view_dom"
path = "src/lib.rs"

[dependencies]
fnv = "1.0"
stdweb = "0.3"
serde = "1.0"
serde_json = "1.0"
view = { path = "../rs-view" }

[dev-dependencies]
