[package]
name = "virtual_view_dom"
version = "0.2.2"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["virtual", "view", "dom", "web"]
categories = ["gui"]

description = "a virtual view transaction renderer for the dom"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/nathanfaucett/rs-virtual_view_dom.git"
homepage = "https://gitlab.com/nathanfaucett/rs-virtual_view_dom"

[lib]
name = "virtual_view_dom"
path = "src/lib.rs"

[dependencies]
futures = "0.1"
fnv = "1.0"
messenger = "0.1"
stdweb = "0.4"
serde = "1.0"
serde_json = "1.0"
virtual_view = { path = "../rs-virtual_view" } #"0.2"

[dev-dependencies]
stdweb = { version = "0.4", features = ["futures", "experimental_features_which_may_break_on_minor_version_bumps"] }
