[package]
name = "virtual_view_dom-example-simple"
version = "0.1.0"
authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]

keywords = ["virtual_view_dom-example-simple"]
description = "virtual_view_dom-example-simple"
license = "MIT"

[dependencies]
virtual_view_dom = {path = "../.."}
virtual_view = {git = "https://gitlab.com/nathanfaucett/rs-virtual_view.git"}
serde = "1.0"
serde_json = "1.0"
stdweb = "0.1"

[dev-dependencies]
